# stealth

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: deps.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  ingest.py
backend/app/core/: audit.py  config.py  rbac.py  security.py
backend/app/db/: models.py  session.py
backend/app/evaluation/: .gitkeep
backend/app/guardrails/: .gitkeep  actions.py  config.yml  runner.py
backend/app/guardrails/flows/: input.co  output.co
backend/app/models/: schemas.py
backend/app/observability/: .gitkeep  langsmith.py
backend/app/rag/: .gitkeep  chain.py  chunker.py  ingest.py  prompts.py  retriever.py
backend/scripts/: create_user.py
backend/tests/: conftest.py  test_rbac.py
backend/tests/unit/: test_chain.py  test_chunker.py  test_guardrails.py  test_ingest_acl.py
data/admin/: .gitkeep  billing_policy.txt
data/clinical/: .gitkeep  drug_reference.txt
frontend/: .gitignore  .gitkeep  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/admin/: IngestForm.tsx  UserTable.tsx
frontend/src/components/auth/: LoginForm.tsx  SignUpForm.tsx
frontend/src/components/chat/: ChatWindow.tsx  CitationList.tsx  GuardrailBadge.tsx  (+1 more)
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml
(+14 files in other folders)
