[project]
name = "stealth-backend"
version = "0.1.0"
description = "Secure RAG medical assistant — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.12",
    # RAG / vector store (milestone 2+)
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.50",
    "pinecone>=5.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
